fix alignment

--- a/Delta Green by Arc Dream Publishing/deltagreen.scss
+++ b/Delta Green by Arc Dream Publishing/deltagreen.scss
@@ -269,6 +269,10 @@ div.sheet-npc {
             grid-row: 8 / 8;
             margin-left: 2%;
 
+            input[type='text'][name='attr_damage'] {
+                text-align: center;
+            }
+
             div.sheet-section-weapons,
             div.sheet-section-header {
                grid-column-gap: 1%;
